Some code beautification